tests/src/frontend/typechecking/invalid/typed_lambda.sk
fun main(): void {
  f = (x: String) -> x;
  _ = f(42);
  print_raw("FAIL")
}
